# schwarzschild

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: schwarzschild.comp  viewport.frag  viewport.vert
src/: main.cpp
